# assignment1

./: .gitignore  README.md  generate_proto.py  requirements.txt
data/: data_generator.py  stream_data.csv
docker/: Dockerfile.grpc.genre  Dockerfile.grpc.mapreduce  Dockerfile.grpc.recommendation  Dockerfile.grpc.userbehavior  Dockerfile.grpc_mixed.client  Dockerfile.grpc_mixed.genre_cpp  Dockerfile.grpc_mixed.mapreduce  Dockerfile.grpc_mixed.recommendation_go  Dockerfile.grpc_mixed.userbehavior  Dockerfile.rest.client  Dockerfile.rest.genre  Dockerfile.rest.mapreduce  Dockerfile.rest.recommendation  Dockerfile.rest.userbehavior  Dockerfile.xmlrpc.client  Dockerfile.xmlrpc.genre  Dockerfile.xmlrpc.mapreduce  Dockerfile.xmlrpc.recommendation  Dockerfile.xmlrpc.userbehavior  docker-compose.grpc.yml  docker-compose.grpc_mixed.yml  docker-compose.rest.yml  docker-compose.xmlrpc.yml
grpc/client/: client copy.py  client.py
grpc/proto/: music_service.proto
grpc/results/: grpc_performance_metrics.json  run_metrics.json
grpc/server/: genre_analysis_server.py  recommendation_service.py  run_server.bat  run_server.ps1  run_services.ps1  user_behavior_service.py
grpc_mixed/: go.mod
grpc_mixed/client/: client.py  (+2 more)
grpc_mixed/cpp_service/: CMakeLists.txt  genre_analysis_logic.cpp  genre_analysis_logic.h
results/: mapreduce_xmlrpc_metrics.json  recommendation_xmlrpc_metrics.json  userbehavior_xmlrpc_metrics.json  xmlrpc_docker_performance_metrics.json
services/: genre_analysis_service.py  mapreduce_service.py  recommendation_service.py  user_behavior_service.py
(+24 files in other folders)
